fixed overlap of toolbar and main content
TG-774

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -10,6 +10,7 @@
 
 .ps-main-content
   padding-top: 0
+  padding-bottom: $toolbar-size !important
   &.ps-main-signed-in-content-with-side
     @media (min-width: 1024px)
      padding-left: $side-menu-size !important
